'Wackman' kan äta godisa och spelet startas om när man har tagit alla godisar.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
 
 	<canvas id="screen" width="630" height="630"></canvas>
 
-	<script type="text/javascript" src="script/actors/Actor.js"></script>
-	<script type="text/javascript" src="script/actors/Player.js"></script>
-	<script type="text/javascript" src="script/KeyBoarder.js"></script>
-	<script type="text/javascript" src="script/Map.js"></script>
-	<script type="text/javascript" src="script/Game.js"></script>
+
+	<script type="text/javascript" src="source/Keyboarder.js"></script>
+	<script type="text/javascript" src="source/Map/MapManager.js"></script>
+	<script type="text/javascript" src="source/GameObjects/BaseObject.js"></script>
+	<script type="text/javascript" src="source/GameObjects/Player.js"></script>
+	<script type="text/javascript" src="source/GameObjects/Candy.js"></script>
+
+
+	<script type="text/javascript" src="source/Wackman.js"></script>
+
 	<script type="text/javascript" src="script/Main.js"></script>
+
+
+
 
 </body>
 
