--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<script type="text/javascript" src="source/Wackman.js"></script>
 
-	<script type="text/javascript" src="script/Main.js"></script>
+	<script type="text/javascript" src="source/Main.js"></script>
 
 
 
