--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<script type="text/javascript" src="source/GameObjects/BaseObject.js"></script>
 	<script type="text/javascript" src="source/GameObjects/Player.js"></script>
 	<script type="text/javascript" src="source/GameObjects/Candy.js"></script>
+	<script type="text/javascript" src="source/GameObjects/Ghost.js"></script>
 
 
 	<script type="text/javascript" src="source/Wackman.js"></script>
