--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
 <head>
 	<meta name="viewport" content="width=600, initial-scale=1.0">
 	<title>Pacman JS</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
-
+	<div style="display:none;" >
+	<img id="rock" src="content/images/rock.png"/>
+	<img id="coin" src="content/images/fish.png"/>
+	<img id="player1" src="content/images/whakman_01.png"/>
+	<img id="player2" src="content/images/whakman_02.png"/>
+	<img id="ghost" src="content/images/ghost_01.png"/>
+	
+	</div>
+	<input type='file' accept='text/plain' onchange='loadMap(event)'><br>
 	<body  onkeydown="keyDown(event)" onkeyup="keyUp(event)">
 
-		<input type='file' accept='text/plain' onchange='loadMap(event)'><br>
-
-		<canvas id="screen" width="630" height="630"></canvas>
-
-
+		<div id="container">
+			<img class="img" src="content/images/background.png" alt="" width="750" height="750" />
+			<canvas id="screen" width="700" height="700" style="padding: 2.5em"></canvas>
+			
+		</div>
 		<script type="text/javascript" src="source/Keyboarder.js"></script>
 		<script type="text/javascript" src="source/Map/MapManager.js"></script>
 		<script type="text/javascript" src="source/GameObjects/BaseObject.js"></script>
@@ -25,9 +34,5 @@
 		<script type="text/javascript" src="source/Wackman.js"></script>
 
 		<script type="text/javascript" src="source/Main.js"></script>
-
-
-
-
 	</body>
 </html>
